--- a/sass/form.scss
+++ b/sass/form.scss
@@ -1,3 +1,43 @@
+
+.form-review{
+
+  &__fieldset{
+    border-left:none;
+    border-right:none;
+    border-top:none;  
+    border-bottom: 1px solid #e5e5e5;
+    margin-bottom: 20px;
+  }
+
+  &__fieldset:last-of-type{
+    border-bottom: none;
+  }
+
+  &__legend{
+    @include big-text;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  &__submit{
+    display: block;
+    font-size: 21px;
+    line-height: 26px;
+    font-weight: 700;
+    color: #fff;
+    text-align: center;
+    margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 100px;
+    border: none;
+    background: $bg-blue;
+    text-transform: uppercase;
+  }
+}
+
 .form-user {
   padding: 20px 18px 6px;
   border: none;
@@ -32,15 +72,11 @@
 .highlighted{
   color: #ff2222;
 }
-.form-review{
 
-  &__legend{
-    font-size: $font-size;
-    line-height: $line-height;
-    font-weight: 700;
-    margin: 17px 0 7px;
-  }
+.impression{
+  margin-bottom: 23px;
 }
+
 .impression-radio{
   padding-top: 13px;
   padding-right: 18px;
@@ -202,10 +238,6 @@
   }
 }
 
-fieldset{
-  margin:0;
-}
-
 .download{
   
   &__photos{
@@ -241,25 +273,5 @@ fieldset{
   &__btn--close{
     background: #f2f2f2 url("../img/btn-close.png") no-repeat scroll 50% 50%;
     background-size: 12px 12px;
-  }
-}
-
-.form-review{
-  &__submit{
-    display: block;
-    font-size: 21px;
-    line-height: 26px;
-    font-weight: 700;
-    color: #fff;
-    text-align: center;
-    margin: 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-bottom: 100px;
-    border: none;
-    background: $bg-blue;
-    text-transform: uppercase;
   }
 }
