--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -2,6 +2,12 @@ $font-stack: "PT Sans", Roboto, Tahoma, Arial, sans-serif;
 $font-size: 14px;
 $font-size-big: 18px;
 $font-size-bigger: 21px;
+$font-color: #333;
 $line-height: 26px;
-$width-mobile: 320px;
 $bg-blue: #81b3d2;
+$grey: #dbdbdb;
+
+$width-mobile: 320px;
+$width-laptop: 768px;
+$width-laptop-end: 1199px;
+$width-desktop: 1200px;
