--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,7 @@
+.page-main{
+  font-size: 0;
+}
+
 .promo{
 
   margin-bottom: 22px;
@@ -18,19 +22,50 @@
 .reason{
   position: relative;
   text-align: center;
+  width: 100%;
+
+  &__image-wrap{
+    width: 66.66666%;
+    min-height: 256px;
+    max-height: 256px;
+    overflow: hidden;
+  }
 
   &--with-top-line{
     padding-top: 70px;
   }
 
-  &--with-top-line::before{
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 37px;
-    background: url("../img/top-line.png") no-repeat center top;
+  &__block{
+    display: inline-block;
+    font-size: $font-size;
+    vertical-align: top;
+    @media (max-width: $width-laptop - 1){
+      width: 100%;
+    }
+  }
+  
+  &--color{
+    background-color: $bg-blue;
+    color: #fff;
+    padding-top: 38px;
+    padding-bottom: 30px;
+    min-height: 188px;
+    max-height: 188px;
+    @media (min-width: $width-laptop){
+      width: 33.33333%;
+      }
+  }
+
+  @media (max-width: $width-laptop - 1){
+    &--with-top-line::before{
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 37px;
+      background: url("../img/top-line.png") no-repeat center top;
+    }
   }
 
   &__title{
@@ -54,20 +89,21 @@
     @include text;
   }
 
-  &--color{
-    background-color: $bg-blue;
-    color: #fff;
-    padding-top: 38px;
-    padding-bottom: 30px;
-  }
-
   &--colorless{
+    display: inline-block;
+    font-size: $font-size;
+    width: 100%;
     color: #333;
     background-color: #eee;
     padding-top: 33px;
     padding-bottom: 30px;
-    padding-left: 55px;
-    padding-right: 55px;
+    /*@media (max-width: $width-laptop - 1){
+      padding-left: 55px;
+      padding-right: 55px;
+    }*/
+    @media (min-width: $width-laptop){
+      width:33.33333%; 
+    }
   }
 
   &--colorless::after{
@@ -87,22 +123,40 @@
   padding-top: 45px;
   padding-bottom: 40px;
 
+
   &__item{
+    display: inline-block;
     position: relative;
-    padding-top: 5px;
-    padding-right: 40px;
-    padding-bottom: 25px;
-    padding-left: 70px;
+    font-size: $font-size;
+    width: 100%;
+
+
+   @media (max-width: $width-laptop - 1){
+      padding-top: 5px;
+      padding-right: 40px;
+      padding-bottom: 25px;
+      padding-left: 70px;
+   }
+    @media (min-width: $width-laptop){
+      width: 33%;
+      text-align: center;
+    }
+         
+  }
+
+  &__image{
+    fill: #81b3d2;
+    stroke: #81b3d2;
+
+    @media (max-width: $width-laptop - 1) {
+      position: absolute;
+      left: 25px;
+      top: 0px;
+    }
   }
 
   &__title{
     @include big-text;
-  }
-
-  &__img {
-    position: absolute;
-    left: 22px;
-    top: 0px;
   }
 }
 
@@ -112,6 +166,16 @@
   padding-bottom: 50px;
   padding-left: 20px;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media (min-width: $width-laptop){
+    width: 59%;
+  }
+
+  @media (min-width: $width-desktop){
+    width: 38%;
+  }
 
   &__title {
     @include title;
@@ -128,4 +192,8 @@
     @include btn;
     @include btn--blue;
   }
+}
+
+.map{
+  margin-bottom: 35px;
 }
