--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -1,9 +1,9 @@
-@mixin clearfix {
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+@mixin grid {
+  position: relative;
+  min-height: 1px;
+  display: inline-block;
+  vertical-align: top;
+  margin-right: -4px;
 }
 
 @mixin title {
@@ -12,7 +12,6 @@
     weight: 700;
   }
   line-height: $line-height;
-  margin: 0;
   color: #000;
 }
 
@@ -59,7 +58,10 @@
   color: #000;
   text-transform: none;
   border: none;
-  padding: 16px 20px;
+  padding-top: 16px;
+  padding-right: 20px;
+  padding-bottom: 16px;
+  padding-left: 20px;
   background: #f2f2f2;
   box-sizing: border-box;
 }
@@ -82,4 +84,18 @@
   width: 145px;
   margin-bottom: 0;
   box-sizing: border-box;
+}
+
+@mixin fieldset-laptop {
+  width: auto;
+  margin: 0 auto;
+  box-sizing: border-box;
+  border: none;
+}
+
+@mixin fieldset-mobile {
+  width: auto;
+  margin: 0 auto;
+  box-sizing: border-box;
+  border: none;
 }
